# nyauser

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yml  install.sh  publish.sh
assets/: nyauser.service
compose/: docker-compose.yaml
compose/config/: config.yml
nyauser/: Cargo.toml
nyauser-cli/: Cargo.toml
nyauser-cli/src/: main.rs
nyauser-types/: Cargo.toml
nyauser-types/src/: lib.rs  profile.rs  pull_entry.rs  series.rs
nyauser/src/: config.rs  main.rs  search.rs
nyauser/src/api/: auth.rs  logger.rs  mod.rs  proc.rs
nyauser/src/api/profile/: get.rs  list.rs  mod.rs  update.rs
nyauser/src/api/pull/: delete.rs  list.rs  mod.rs
nyauser/src/api/series/: get.rs  get_status.rs  list.rs  mod.rs  update.rs
nyauser/src/db/: mod.rs  profile.rs  pull_entry.rs  series.rs
nyauser/src/sink/: mod.rs  transmission.rs
nyauser/src/source/: mod.rs
src/: config.rs  main.rs  nyaa.rs  profile.rs  regex_wrapper.rs  search.rs  series.rs  transmission.rs
src/api/: auth.rs  mod.rs
src/api/profile/: delete.rs  get.rs  list.rs  update.rs
src/api/pull/: delete.rs  list.rs  mod.rs
src/api/series/: delete.rs  get.rs  list.rs  update.rs
src/db/: mod.rs  profile.rs  pull_entry.rs  series.rs
src/sink/: mod.rs  transmission.rs
src/source/: mod.rs  nyaa.rs
