[package]
name = "nyauser"
version = "0.1.0"
edition = "2021"

[dependencies]
transmission-rpc = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4"
rss = "2.0"
reqwest = "0.11"
urlencoding = "2.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sled = "0.34"
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
regex = "1.5"
hex = "0.4"
clap = { version = "3.1", features = ["derive"] }
indexmap = { version = "1.9", features = ["serde"] }