[package]
name = "nyauser"
version = "0.1.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/nyauser"
description = "Torrent and media management daemon"
keywords = [ "torrent", "nyaa", "management" ]

[dependencies]
transmission-rpc = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
# don't update this to 0.9, it breaks everything
serde_yaml = "0.8"
lazy_static = "1.4"
rss = "2.0"
reqwest = "0.11"
urlencoding = "2.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sled = "0.34"
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
regex = "1.7"
hex = "0.4"
clap = { version = "3.1", features = ["derive"] }
indexmap = { version = "1.9", features = ["serde"] }
axum = "0.6"
axum-auth = "0.4.0"
hyper = "0.14"
futures = "0.3"
http = "0.2"
http-body = "0.4"
tower-service = "0.3"
tower-layer = "0.3"
prometheus = { version = "0.13.3", features = ["process"] }
prometheus_exporter = "0.8"
pin-project = "1.0"
