[package]
name = "nyauser-cli"
version = "0.1.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/nyauser"
description = "Torrent and media management daemon"
keywords = [ "torrent", "nyaa", "management" ]
readme = "../README.md"

[dependencies]
# don't update this to 0.9, it breaks everything
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
clap = { version = "3.1", features = ["derive"] }
indexmap = { version = "1.9", features = ["serde"] }
regex = "1.7"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
nyauser-types = { "path" = "../nyauser-types" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.9"
cli-table = "0.4"
urlencoding = "2.1"
scrawl = "2.0.0"

[[bin]]
name = "nyc"
path = "src/main.rs"