[package]
name = "nyauser-types"
version = "0.1.1"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/nyauser"
description = "Torrent and media management daemon"
keywords = [ "torrent", "nyaa", "management" ]
readme = "../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
indexmap = { version = "1.9", features = ["serde"] }
regex = "1.7"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
